Change log

1.21: Allow redefinition of keywords as macros.  In the process, I
added an undefine keyword to do the obvious: remove a macro.

Added xy_gg macros, too.

Fixed a bug where giving a coordinate name before a parenthesized point
caused a syntax error.  Thanks to Kees Zeelenberg for spotting this.

1.20: The big jump reflects both internal changes and visible feature
changes.  The class structure in the code has been substantially
revamped, and the code brought into better conformance with the
current state of the C++ world.  As of version 1.20, grap no longer
attempts to compile under g++ 2.7.2.  grap 1.11 source will remain
available from http://www.lunabase.org/~faber/Vault/software/grap for
those who need it.

One feature change is that troff and pic commands are now placed
correctly in their relative order rather than being collected before
and after the graph.  This required specifying more carefully where
the frame generation is placed.  Frames are output either immediately
before the first plotted object or after the frame statement, if any.
This change motivated much of the class changes and actually cleaned
them up somewhat.

grap is now *much* more tolerant of variables with the keword names.
Things like

from=1; to = 10 
for i from from to to do { ... }

now work.  This is due to a sizable rewrite of the tokenizer.  In
fact, variables and coordinate spaces can share names.  Things like:

for next = 0 to 10 do {
	next at next next, next
}

now work (you have to add a couple ticks statements to really see that
example). I'd say we're to the point where obfuscated grap programs
are a possibility.

The only change this necessitated was that if you specify a coordinate
system in an automatic ticks statement, you have to use the on or auto
keyword.  See the examples document for an example.

I recoded macros to remove an antiquated construct that was confusing
some non-g++ compilers.  A static array was recoded as an STL vector,